--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
+    "method-override": "^3.0.0",
     "mysql2": "^3.6.2"
   }
 }
